[ADD] complete workshop

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,8 +19,13 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
   }
+}
+
+.mapboxgl-ctrl-group.mapboxgl-ctrl {
+  display: none !important;
 }
